@@ -126,7 +126,8 @@ enum ldns_enum_status {
 	LDNS_STATUS_INVALID_TAG,
 	LDNS_STATUS_TYPE_NOT_IN_BITMAP,
 	LDNS_STATUS_INVALID_RDF_TYPE,
-	LDNS_STATUS_RDATA_OVERFLOW
+	LDNS_STATUS_RDATA_OVERFLOW,
+	LDNS_STATUS_SYNTAX_SUPERFLUOUS_TEXT_ERR
 };
 typedef enum ldns_enum_status ldns_status;
 
